crates/uitest/fixtures/ty_check/const_checked_arithmetic_overflow.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/const_checked_arithmetic_overflow.fe
---
error[3-0025]: division by zero in const context
  ┌─ const_checked_arithmetic_overflow.fe:4:25
  │
4 │ const DIV_BY_ZERO: u8 = 1 / 0
  │                         ^^^^^ cannot divide by zero

error[3-0025]: division by zero in const context
  ┌─ const_checked_arithmetic_overflow.fe:5:25
  │
5 │ const REM_BY_ZERO: u8 = 1 % 0
  │                         ^^^^^ cannot divide by zero
